--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <body>
   <h1>Rock, Paper or Scissors?</h1>
-  <p> R P S </p>
+  <p>
+    <span class= "circle">R</span>
+    <span class= "circle">P</span>
+    <span class= "circle">S</span>
   <a class='instruction' href="https://en.wikipedia.org/wiki/Rock_paper_scissors">RULES</a>
 </body>
 
