--- a/index.html
+++ b/index.html
@@ -11,18 +11,13 @@
     
   <h1>Rock, Paper or Scissors?</h1>
   <p>
-    <span class="circle" onclick="play('Rock')">R</span>
-    <span class="circle" onclick="play('Paper')">P</span>
-    <span class="circle" onclick="play('Scissors')">S</span>
+    <span class="circle" onclick="play('rock')">R</span>
+    <span class="circle" onclick="play('paper')">P</span>
+    <span class="circle" onclick="play('scissors')">S</span>
     </p>
 
   <a class='instruction' href="https://en.wikipedia.org/wiki/Rock_paper_scissors">RULES</a>
-  <script src="script.js">
-    function play(msg) {
-        alert(msg + " was clicked");
-
-    }
-</script>
+  <script src="script.js"></script>
 
 
 </body>
